# DLsite_rust_renamer

./: Cargo.toml  README.md  clash_config.yaml
src/: cached_scraper_db.rs  config.rs  dlsite.rs  dlsite_scraper -备份.rs  dlsite_scraper.rs  fonts.rs  main.rs  renamer.rs  scaner.rs  ui.rs  ui_logger.rs  work_metadata.rs
src/utils/: log_macro.rs  mod.rs
